--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,9 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.43.4",
     "@tanstack/react-query": "^5.28.6",
     "@tanstack/react-router": "^1.26.20",
     "axios": "^1.6.8",
