--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.43.4",
     "@tanstack/react-query": "^5.28.6",
+    "@tanstack/react-query-devtools": "^5.50.1",
     "@tanstack/react-router": "^1.26.20",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
